优化：Deserializer